Added "OUTDATED" comment

--- a/ReadMe
+++ b/ReadMe
@@ -1,2 +1,3 @@
+OUTDATED: I wrote this during the first semester of college. Nothing in here is useful, except maybe the Matrix class.
 Just my implementation of bunch of math related things in C++. 
 Feel free to use it, should you so desire.
